# TF-AST2

./: (no tocar) AST_I_TF_Roldan.ipynb  (no tocar) EDA_AST_I.ipynb  .gitignore  0.Preparacion_datos_AST_II.ipynb  1.Preparacion_de_datos.ipynb  1_Preparacion-de-datos.ipynb  2. EDA Temperaturas diarias.ipynb  2. EDA_AST_II.ipynb  2_EDA-Temperaturas-diarias.ipynb  3. Imputaciones.ipynb  3. LSTM_Imputer.ipynb  4. EDA Comparativo (imputaciones).ipynb  4. EDA-compara.ipynb  4. EDA-imputaciones.ipynb  5. Forecast-Serie-Kalman.ipynb  5. Forecast-busqueda-hp.ipynb  5. Forecast.ipynb  5.b. Forecast-Serie-Kalman.ipynb  5_Busqueda-hp-optuna.ipynb  6_Forecast-Serie-Ruidosa.ipynb  Forecast-busqueda-hp-v2.ipynb  README.md  colores.py  main.py  pyproject.toml
csv/: MODIS_Aqua_Terra.csv  MODIS_Aqua_Terra_diario.csv  ts.csv  ts_d.csv  ts_d_diario.csv  ts_d_diario_imputado.csv  ts_diario.csv  ts_imputado_bilstm.csv  ts_imputado_bilstm_k.csv  ts_imputado_polinomio.csv  ts_imputado_simple.csv  ts_imputado_time.csv  ts_n.csv  ts_n_diario.csv  ts_n_diario_imputado.csv
